Borradas clases habladas con Toni : additional data, payment details y installments, añadido método encapsulado para calcular tasa, añadidas dependencias de JavaFX